Fixed spacing for full width editor

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   --secondary-purple: 61, 54, 88;
   --light-grey: #F8F8F8;
   --grey: #888;
-  --dark-grey: #575757;
+  --dark-grey: 87, 87, 87;
   --black: #171717;
   --green : #A6C48A;
   --current-body-font: '';
@@ -22,7 +22,7 @@
 
 .theme-dark {
   --color-primary: var(--black);
-  --color-secondary: var(--dark-grey);
+  --color-secondary: rgb(var(--dark-grey));
   --color-accent: var(--grey);
   --font-color: #fbfbfb;
   --body-font: 400;
@@ -162,14 +162,33 @@ h2 {
 /* ------------- EDITOR SECTION -------------*/
 
 #editorTitle {
-  margin-top: 4rem;
+ 
 }
 
 .editor-section {
-  margin: 5rem 15rem;
+  /* margin: 5rem 15rem; */
   display: none;
   flex-direction: column;
 }
+
+.editor-section__toolbar {
+  border: 0 !important;
+  box-shadow: 0 .3rem 0 0 rgba(var(--dark-grey), .1);
+  
+  top: 0;
+  position: fixed;
+  z-index: 5;
+  background-color: var(--color-accent);
+
+  width: 100%;
+  padding: 1rem 15rem !important;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
 
 .editor-section__title {
   font-family: 'Playfair Display', serif;
@@ -177,7 +196,7 @@ h2 {
   color: var(--font-color);
   background-color: var(--color-primary);
   padding: .5rem 15px;
-  margin-bottom: 1rem;
+  margin: 15rem 15rem 1rem 15rem;
   -webkit-appearance: none;
   border: 2px solid var(--color-primary);
 }
@@ -188,9 +207,9 @@ h2 {
 }
 
 .editor-section__editor {
-  width: 100%;
-  height: 44.2rem;
-  max-height: 84.2rem;
+  width: inherit;
+  min-height: 100vh;
+  margin: 5rem 15rem;
 }
 
 .editor-section__menu {
@@ -548,9 +567,9 @@ input:checked+.slider:before {
 #editor-code {
   border: 0;
 }
-.ql-toolbar {
+/* .ql-toolbar {
   border: none !important;
-}
+} */
 
 .ql-toolbar--hidden {
   visibility: hidden;
@@ -765,7 +784,7 @@ input:checked+.slider:before {
 
 .notes__lastChanged {
   font-size: 1.3rem;
-  color: var(--dark-grey);
+  color: rgb(var(--dark-grey));
   margin-bottom: 1rem;
 }
 
@@ -819,10 +838,4 @@ input:checked+.slider:before {
     size: auto;
     margin: 2cm;
   }
-}
-
-#toolbar-container {
-  position: absolute;
-  top: 0;
-  text-align: center;
 }
